--- a/TYPO3.Neos/.gitignore
+++ b/TYPO3.Neos/.gitignore
@@ -7,4 +7,4 @@
 .DS_Store
 /Scripts/**/src
 /Tests/Behavior/behat.yml
-/Resources/Public/JavaScript/ContentModule-built.js
+!/Resources/Public/JavaScript/ContentModule-built.js
